2011-09-09
* Moved the body of SWRollResult -process into the default initializer
  since it seemed silly to have a separate method for it that is only
  ever called once.
* Changed SWDice -dieString to -asString.

2011-09-08
* Cleaned up the code to conform to the "standard" style guides, as well
  as commented the code finally.
* Added -rollAgainstTaretNumber to SWDice.
* Changed params to -rollWithMod:againstTargetNumber: to be NSInteger and
  NSUInteger, respectively.
* Added -dieString to SWDice class, which returns the die/dice represented
  by an instance in xdx[+/-x] format.
* Added -tallyAsString to SWRollResult class, which returns the roll tally
  as a string, joined by commas.
* Added this change log file! :D