@@ -24,11 +24,6 @@
 #import "SWDice.h"
 #import "SWRollResult.h"
 
-// The dictionary to hold all of the standard Savage Worlds
-// dice objects. This is so we don't have to create new objects
-// everytime we need a standard die roll.
-static NSDictionary *allDice;
-
 @implementation SWDice
 
 @synthesize number;
@@ -62,119 +57,6 @@ static NSDictionary *allDice;
 - (id) init
 {
   return [self initWithNumber:1 sides:6 mod:0];
-}
-
-+ (SWDice *) getDie:(DieType)die
-{
-  // Build allDice dictionary if it doesn't exist.
-  if (allDice == nil) {
-    NSArray *valueArray = [NSArray arrayWithObjects:
-      [SWDice withSides:4],
-      [SWDice withSides:6],
-      [SWDice withSides:8],
-      [SWDice withSides:10],
-      [SWDice withSides:12],
-      [SWDice withSides:6],
-      [SWDice withNumber:1 sides:4 mod:-2],
-      [SWDice withNumber:1 sides:6 mod:-2],
-      nil];
-
-    NSArray *keyArray = [NSArray arrayWithObjects:
-      [NSString stringWithFormat:@"%d", D4],
-      [NSString stringWithFormat:@"%d", D6],
-      [NSString stringWithFormat:@"%d", D8],
-      [NSString stringWithFormat:@"%d", D10],
-      [NSString stringWithFormat:@"%d", D12],
-      [NSString stringWithFormat:@"%d", WILD_DIE],
-      [NSString stringWithFormat:@"%d", UNTRAINED],
-      [NSString stringWithFormat:@"%d", UNTRAINED_WILD_DIE],
-      nil];
-
-    allDice = [NSDictionary dictionaryWithObjects:valueArray
-                                          forKeys:keyArray];
-  }
-
-  return [allDice valueForKey:[NSString stringWithFormat:@"%d", die]];
-}
-
-+ getDieFromString:(NSString *)dieString
-{
-  // XXX -- Default to a d4; change this later?
-  DieType die = D4;
-
-  if ([dieString compare: @"d4" 
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = D4;
-  }
-
-  if ([dieString compare: @"d6"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = D6;
-  }
-
-  if ([dieString compare: @"d8"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = D8;
-  }
-
-  if ([dieString compare: @"d10"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = D10;
-  }
-
-  if ([dieString compare: @"d12"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = D12;
-  }
-
-  if ([dieString compare: @"WILD_DIE"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = WILD_DIE;
-  }
-
-  if ([dieString compare: @"UNTRAINED"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = UNTRAINED;
-  }
-
-  if ([dieString compare: @"UNTRAINED_WILD_DIE"
-                 options:NSCaseInsensitiveSearch] == NSOrderedSame)
-  {
-    die = UNTRAINED_WILD_DIE;
-  }
-
-  return [SWDice getDie:die];
-}
-
-+ (NSString *) getDieAsString:(DieType)die
-{
-  switch(die) {
-  case D4:
-    return @"d4";
-  case D6:
-    return @"d6";
-  case D8:
-    return @"d8";
-  case D10:
-    return @"d10";
-  case D12:
-    return @"d12";
-  case WILD_DIE:
-    return @"Wild Die";
-  case UNTRAINED:
-    return @"Untrained";
-  case UNTRAINED_WILD_DIE:
-    return @"Untrained Wild Die";
-  default:
-    return @"Unknown Die Type";
-  }
 }
 
 + (SWDice *) withNumber:(NSUInteger)num
